--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -17,12 +17,13 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Numeric.LinearAlgebra.Dimensional.DK
+  exposed-modules:     Numeric.LinearAlgebra.Dimensional.DK.Shapes
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base < 5,
                        time < 1.5,
                        numtype-dk < 0.3,
-                       dimensional-dk
+                       dimensional-dk,
+                       semigroups
   -- hs-source-dirs:      
   default-language:    Haskell2010
