--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -24,6 +24,7 @@ library
   build-depends:       base < 5,
                        time < 1.5,
                        numtype-dk < 0.4,
-                       dimensional-dk
+                       dimensional-dk,
+                       bed-and-breakfast
   -- hs-source-dirs:      
   default-language:    Haskell2010
