--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -26,6 +26,7 @@ library
                        time < 1.5,
                        numtype-dk >= 0.4,
                        dimensional-dk,
+                       template-haskell,
                        bed-and-breakfast
   -- hs-source-dirs:      
   default-language:    Haskell2010
