--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -19,7 +19,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Numeric.LinearAlgebra.Dimensional.DK,
                        Numeric.LinearAlgebra.Dimensional.DK.Internal,
-                       Numeric.LinearAlgebra.Dimensional.DK.Shapes
+                       Numeric.LinearAlgebra.Dimensional.DK.Shapes,
+                       Numeric.LinearAlgebra.Dimensional.DK.QuasiQuotes
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base < 5,
@@ -27,6 +28,7 @@ library
                        numtype-dk >= 0.4,
                        dimensional-dk,
                        template-haskell,
+                       parsec,
                        bed-and-breakfast
   -- hs-source-dirs:      
   default-language:    Haskell2010
