--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -28,7 +28,8 @@ library
                        numtype-dk >= 0.4,
                        dimensional-dk,
                        template-haskell,
-                       parsec,
+                       haskell-src-meta,
+                       split,
                        bed-and-breakfast
   -- hs-source-dirs:      
   default-language:    Haskell2010
