--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -17,10 +17,8 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Numeric.LinearAlgebra.Dimensional.DK,
-                       Numeric.LinearAlgebra.Dimensional.DK.Internal,
-                       Numeric.LinearAlgebra.Dimensional.DK.Shapes,
-                       Numeric.LinearAlgebra.Dimensional.DK.QuasiQuotes
+  exposed-modules:     Numeric.LinearAlgebra.Dimensional.DK.Shapes
+                       --Numeric.LinearAlgebra.Dimensional.DK.QuasiQuotes
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base < 5,
@@ -28,7 +26,6 @@ library
                        dimensional-dk,
                        template-haskell,
                        haskell-src-meta,
-                       split,
-                       bed-and-breakfast >= 0.4.3
-  -- hs-source-dirs:      
+                       split
+  hs-source-dirs:      src
   default-language:    Haskell2010
