--- a/dimensional-dk-linalg.cabal
+++ b/dimensional-dk-linalg.cabal
@@ -24,8 +24,9 @@ library
   build-depends:       base < 5,
                        numtype-dk >= 0.4,
                        dimensional-dk,
-                       template-haskell,
-                       haskell-src-meta,
-                       split
+                       dimensional-dk-experimental
+                       --template-haskell,
+                       --haskell-src-meta,
+                       --split
   hs-source-dirs:      src
   default-language:    Haskell2010
